--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "dependencies": {
     "discord.js": "11.4.2",
-    "request": "2.81.0"
+    "request": "2.81.0",
+     "ffmpeg": "0.0.4",
+    "discord.js-arbitrary-ffmpeg": "1.0.0",
+    "node-opus": "0.2.7",
+    "opusscript": "0.0.6",
+    "ffmpeg-binaries": "3.2.2-3"
   }
 }
